--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  responsive_flutter: ^0.0.4
   flutter:
     sdk: flutter
 
@@ -49,6 +50,7 @@ flutter:
     - assets/images/logo_facebook.png
     - assets/images/logo_google.png
     - assets/images/logo_ipersonal.jpeg
+    - assets/images/visa.jpg
 
   #   - images/a_dot_ham.jpeg
 
