--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ flutter:
     - assets/images/logo_google.png
     - assets/images/logo_ipersonal.jpeg
     - assets/images/visa.jpg
+    - assets/images/aaa.jpg
 
   #   - images/a_dot_ham.jpeg
 
