--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ environment:
 
 dependencies:
   responsive_flutter: ^0.0.4
-  cloud_firestore: ^0.14.2
+  firebase_core: ^0.5.0
+  firebase_database: ^4.0.0
   flutter:
     sdk: flutter
 
