--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,10 @@ environment:
 
 dependencies:
   responsive_flutter: ^0.0.4
-  firebase_core: ^0.5.0
+  firebase_core: ^0.5.1
   firebase_database: ^4.2.0
   firebase_auth: ^0.18.2
+  provider: ^3.1.0
   flutter:
     sdk: flutter
 
