--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^0.5.1
   firebase_database: ^4.2.0
   firebase_auth: ^0.18.2
+  flutter_spinkit: ^4.1.2
   provider: ^3.1.0
   flutter:
     sdk: flutter
