--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,6 +60,8 @@ flutter {
 
 dependencies {
     implementation 'com.google.firebase:firebase-database:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
