--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ flutter:
     - assets/images/logo_ipersonal.jpeg
     - assets/images/visa.jpg
     - assets/images/aaa.jpg
+    - assets/images/imgperfil.jpg
 
   #   - images/a_dot_ham.jpeg
 
